--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@angular/common": "~13.2.0",
     "@angular/compiler": "~13.2.0",
     "@angular/core": "~13.2.0",
+    "@angular/fire": "^7.3.0",
     "@angular/forms": "~13.2.0",
     "@angular/google-maps": "^13.2.6",
     "@angular/localize": "~13.2.0",
@@ -27,6 +28,7 @@
     "@ng-web-apis/geolocation": "^1.0.4",
     "@popperjs/core": "^2.10.2",
     "bootstrap": "^5.1.3",
+    "firebase": "^9.6.10",
     "html2canvas": "^1.4.1",
     "leaflet": "^1.7.1",
     "ngx-webcam": "^0.4.1",
