--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
+    "@angular/service-worker": "~13.2.0",
     "@asymmetrik/ngx-leaflet": "^13.0.2",
     "@ng-bootstrap/ng-bootstrap": "^12.0.0",
     "@ng-web-apis/common": "^2.0.0",
