--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@ng-web-apis/common": "^2.0.0",
     "@ng-web-apis/geolocation": "^1.0.4",
     "@popperjs/core": "^2.10.2",
+    "angularfire2": "^5.0.0-rc.9",
     "bootstrap": "^5.1.3",
     "firebase": "^9.6.10",
     "html2canvas": "^1.4.1",
